changed media width to 1050 from 600 to avoid horizontal scrolling

--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,8 @@
     font-size: 50pt;
     font-weight: 800;
 
-    font-family: var(--font-family)
+    font-family: var(--font-family);
+    border-bottom: 0.5px solid black;
   }
 
 
@@ -87,7 +88,6 @@
     display: flex;
     flex-direction: row;
     height: 100%;
-    width: 100%;
   }
 
 
@@ -157,7 +157,7 @@
   #short-desc {
     padding: 10px;
     font-size: 14pt;
-    max-width: 70ch;
+    max-width: 60ch;
     min-width: 30ch;
 
     border: 1px solid black;
@@ -170,7 +170,7 @@
     font-weight: 800;
   }
 
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 1050px) {
 
     .flex-row {
       flex-direction: column;
@@ -209,9 +209,9 @@
       padding: 5px;
       position: sticky;
       top: 0;
+
       border-bottom-left-radius: 10px;
       border-bottom-right-radius: 10px;
-      border-bottom: 0.5px solid black;
     }
 
     a {
